2003-06-08 Mark Finlay <sisob@eircom.net>

	* 48x48/apps/gnome-accessories.png: renamed to
	gnome-util.png
	* 48x48/apps/gnome-programming.png:
	renamed to gnome-devel.png
	* 48x48/apps/gnome-games.png:
	renamed to gnome-joystick.png

	Changing icon names breaks backwards compatability,
	so I''m changing them back.

2003-06-06 Mark Finlay <sisob@eircom.net>
	
	* 48x48/apps/gnome-audio2.png:
	* 48x48/apps/gnome-games.png:
	* 48x48/apps/gnome-globe.png:
	* 48x48/apps/gnome-graphics.png:
	* 48x48/apps/gnome-help.png:
	* 48x48/apps/gnome-multimedia.png:
	* 48x48/apps/gnome-programming.png:
	* 48x48/apps/gnome-settings.png:
	* 48x48/apps/gnome-unknown.png:
	* 48x48/apps/gnome-system.png:
	* 48x48/MakeFile.am:

	Add new icons for use in the gnome menu and elsewhere.
	Part of the clean up of gnome-desktop/pixmaps

2003-06-05 Mark Finlay <sisob@eircom.net>

	* 48x48/apps/gnome-logout.png:
	* 48x48/apps/gnome-shutdown.png:
	* 48x48/apps/gnome-reboot.png:
	* 48x48/apps/gnome-lockscreen.png:
	* 48x48/apps/gnome-accessories.png:
	* 48x48/MakeFile.am:

	Add new icons for use in the gnome menu and elsewhere.

2003-06-05 Kenneth Rohde Christiansen <kenneth@gnu.org>

	* configure.in: Added li to ALL_LINGUAS.

=== gnome-icon-theme 1.0.4 ===
	
2003-06-04  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Bump to 1.0.4

2003-05-30  Marco Pesenti Gritti  <marco@it.gnome.org>

	* 36x36/Makefile.am:
	* 36x36/apps/.cvsignore:
	* 36x36/apps/Makefile.am:
	* 36x36/apps/gnome-spinner-rest.png:
	* 36x36/apps/gnome-spinner.png:
	* configure.in:

	Add icons for the gnome spinner.

=== gnome-icon-theme 1.0.3 ===
	
2003-05-19  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Bump to 1.0.3.

2003-05-16  Dave Camp  <dave@ximian.com>

	* 48x48/emblems/Makefile.am:
	* 48x48/emblems/emblem-desktop.png: Added desktop emblem from
	Jimmac.

2003-05-16  Jakub Steiner <jimmac@ximian.com>

	* 24x24/Makefile.am: add apps (thanks yaneti)
