@@ -1,5 +1,11 @@
 2003-06-08 Mark Finlay <sisob@eircom.net>
 
+	* 48x48/apps/Makefile.am
+
+	Opps, forgot to fix the makefile
+
+2003-06-08 Mark Finlay <sisob@eircom.net>
+
 	* 48x48/apps/gnome-accessories.png: renamed to
 	gnome-util.png
 	* 48x48/apps/gnome-programming.png:
